--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
     "react": "^19.0.0",
+    "react-chatbotify": "^2.0.0-beta.31",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
