--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rizal-final-project",
+  "name": "its120l-final-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,6 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
     "react": "^19.0.0",
-    "react-chatbotify": "^2.0.0-beta.31",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.8"
