--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.2",
     "daisyui": "^5.0.0",
+    "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.8"
+    "tailwindcss": "^4.0.8",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
