--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.2",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.0",
     "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
     "zustand": "^5.0.3"
   },
